# CubeMX-CMake-VSCode

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json
Application/: app_main.c
CubeMX/: g071.ioc
cmake/: STM32G071xx_HAL_PARA.cmake  gcc-arm-none-eabi.cmake
